<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hu.tyler.dontdinealone.EditProfileActivity"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="111dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/scrollView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="0dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                android:background="#FF9900"
                android:fontFamily="casual"
                android:text="Avatar :"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <ImageView
                android:id="@+id/ava1"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:adjustViewBounds="true"
                android:background="@color/fui_transparent"
                android:onClick="highlight"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/a1" />

            <ImageView
                android:id="@+id/ava2"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:adjustViewBounds="true"
                android:background="@color/fui_transparent"
                android:onClick="highlight"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/a2" />

            <ImageView
                android:id="@+id/ava3"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:adjustViewBounds="true"
                android:background="@color/fui_transparent"
                android:onClick="highlight"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/a3" />

            <ImageView
                android:id="@+id/ava4"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:adjustViewBounds="true"
                android:background="@color/fui_transparent"
                android:onClick="highlight"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/a6" />

            <ImageView
                android:id="@+id/ava5"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:adjustViewBounds="true"
                android:background="@color/fui_transparent"
                android:onClick="highlight"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/a4" />

            <ImageView
                android:id="@+id/ava6"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:adjustViewBounds="true"
                android:background="@color/fui_transparent"
                android:onClick="highlight"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/a5" />

            <ImageView
                android:id="@+id/ava7"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:adjustViewBounds="true"
                android:background="@color/fui_transparent"
                android:onClick="highlight"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/a7" />

            <ImageView
                android:id="@+id/ava8"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:adjustViewBounds="true"
                android:background="@color/fui_transparent"
                android:onClick="highlight"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/a8" />


            <ImageView
                android:id="@+id/ava9"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:adjustViewBounds="true"
                android:background="@color/fui_transparent"
                android:onClick="highlight"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/a14" />

            <ImageView
                android:id="@+id/ava10"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:adjustViewBounds="true"
                android:background="@color/fui_transparent"
                android:onClick="highlight"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/a9" />

            <ImageView
                android:id="@+id/ava11"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:adjustViewBounds="true"
                android:background="@color/fui_transparent"
                android:onClick="highlight"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/a10" />

            <ImageView
                android:id="@+id/ava12"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:adjustViewBounds="true"
                android:background="@color/fui_transparent"
                android:onClick="highlight"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/a11" />

            <ImageView
                android:id="@+id/ava13"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:adjustViewBounds="true"
                android:background="@color/fui_transparent"
                android:onClick="highlight"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/a12" />

            <ImageView
                android:id="@+id/ava14"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:adjustViewBounds="true"
                android:background="@color/fui_transparent"
                android:onClick="highlight"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/a13" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="297dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="104dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="#FF9900"
                android:fontFamily="casual"
                android:text="Display Name:"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:layout_editor_absoluteX="122dp"
                tools:layout_editor_absoluteY="42dp" />

            <EditText
                android:id="@+id/editTextDisplayNameInEditProfile"
                android:layout_width="262dp"
                android:layout_height="45dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="#FF9900"
                android:fontFamily="casual"
                android:text="Gender:"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:layout_editor_absoluteX="122dp"
                tools:layout_editor_absoluteY="160dp" />

            <EditText
                android:id="@+id/editTextGender"
                android:layout_width="262dp"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="122dp"
                tools:layout_editor_absoluteY="199dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginTop="40dp"
                android:background="#FF9900"
                android:fontFamily="casual"
                android:text="Spirit Animal:"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:layout_editor_absoluteX="122dp"
                tools:layout_editor_absoluteY="276dp" />

            <EditText
                android:id="@+id/editTextAnimal"
                android:layout_width="262dp"
                android:layout_height="45dp"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="122dp"
                tools:layout_editor_absoluteY="313dp"
                android:visibility="visible" />


            <LinearLayout
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp">

                <Button
                    android:id="@+id/buttonEditOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FF9900"
                    android:fontFamily="casual"
                    android:onClick="saveProfile"
                    android:text="OK"
                    android:textColor="#FFF"
                    tools:layout_editor_absoluteX="296dp"
                    tools:layout_editor_absoluteY="521dp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/buttonEditCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:background="#FF9900"
                    android:fontFamily="casual"
                    android:onClick="goToLobbyActivity"
                    android:text="cancel"
                    android:textColor="#FFF"
                    tools:layout_editor_absoluteX="149dp"
                    tools:layout_editor_absoluteY="521dp"
                    android:visibility="visible" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBarInEditProfileActivity"
        style="?android:attr/progressBarStyle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scrollView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3"
        app:layout_constraintVertical_bias="0.498"
        android:visibility="gone" />
</android.support.constraint.ConstraintLayout>
